@startuml AchatEtats
!theme plain
skinparam backgroundColor #FFFFFF
skinparam state {
    BackgroundColor #F8F9FA
    BorderColor #2C3E50
    ArrowColor #2C3E50
}

title **États-Transitions : Processus d'Achat**

[*] --> pending : Création commande

pending : EN ATTENTE
pending : Commande créée
pending : Paiement en cours

confirmed : CONFIRMÉE  
confirmed : Paiement validé
confirmed : Stock décrémenté

preparing : PRÉPARATION
preparing : Commande en préparation
preparing : Transition auto (15s)

shipped : EXPÉDIÉE
shipped : Commande expédiée
shipped : Numéro de suivi

delivered : LIVRÉE
delivered : Commande livrée
delivered : Processus terminé

cancelled : ANNULÉE
cancelled : Commande annulée
cancelled : Stock restauré

pending --> confirmed : Paiement validé
pending --> cancelled : Échec paiement

confirmed --> preparing : Auto (15s)
confirmed --> cancelled : Annulation

preparing --> shipped : Auto (15s)
preparing --> cancelled : Annulation

shipped --> delivered : Auto (15s)

delivered --> [*]
cancelled --> [*]

@enduml
